Main section 1 complete

--- a/index.html
+++ b/index.html
@@ -1,22 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Open+Sans:wght@400;600;700&family=Raleway:wght@400;600&family=Work+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header class="head-part open-sans-fonts">
-        <div class="hero-part">
-            <h3>Savor the Flavors</h3>
-            <h1>Experience Culinary Excellence Food Experience</h1>
-            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC.</p>
-            <button class="open-sans-fonts">Shop The Hottest Food</button>
-        </div>
-    </header>
-</body>
-   
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Restaurant</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Open+Sans:wght@400;600;700&family=Raleway:wght@400;600&family=Work+Sans:wght@400;600;700&display=swap"
+            rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header class="head-part open-sans-fonts">
+            <div class="hero-part">
+                <h3>Savor the Flavors</h3>
+                <h1>Experience Culinary Excellence Food Experience</h1>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random
+                    text. It has roots in a piece of classical Latin literature
+                    from 45 BC.</p>
+                <button class="open-sans-fonts">Shop The Hottest Food</button>
+            </div>
+        </header>
+
+        <main>
+            <section class="card-section open-sans-fonts">
+                <h4>Favorite Brands</h4>
+                <h1>Your Favorite Brands Food Are Now On Sale</h1>
+                <div class="cards">
+                    <div class="card1">
+                        <img src="./assets/pizza.png" alt="Pizza">
+                        <button class="open-sans-fonts">Pizza Burg</button>
+                        <h2>Up TO 50% off</h2>
+                        <p>Contrary to popular belief, Lorem Ipsum is not simply
+                            random text.</p>
+                    </div>
+                    <div class="card1">
+                        <img src="./assets/biriyani.png" alt="Biriyani">
+                        <button class="open-sans-fonts">Kacchi Bhai</button>
+                        <h2>Up TO 50% off</h2>
+                        <p>Contrary to popular belief, Lorem Ipsum is not simply
+                            random text.</p>
+                    </div>
+                    <div class="card1">
+                        <img src="./assets/burger.png" alt="Burger">
+                        <button class="open-sans-fonts">Burger King</button>
+                        <h2>Up TO 50% off</h2>
+                        <p>Contrary to popular belief, Lorem Ipsum is not simply
+                            random text.</p>
+                    </div>
+                </div>
+                <button class="open-sans-fonts card-btn">Watch All
+                    Sells</button>
+            </section>
+
+        </main>
+
+    </body>
