Main section 2 complete

--- a/index.html
+++ b/index.html
@@ -54,6 +54,41 @@
                     Sells</button>
             </section>
 
+
+        <section class="pizza-card-section">
+            <div class="pizza-card">
+                <div class="card_image_part"></div>
+                <div class="card_bottom_part">
+                    <div class="pizza_burg_box">Pizza Burg</div>
+                    <h1>Up to 50% Off</h1>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+                    <button class="shopbutton">Watch All Sells</button>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="about-us">
+            <div class="us-img">
+                <img src="./assets/foods.png" alt="Foods">
+            </div>
+            <div class="us-des open-sans-fonts">
+                <div>
+                    <h1>We always make sure to provide you with good food</h1>
+                    <p>Don’t miss a thing! Subscribe to our newsletter</p>
+                    <hr>
+                    <h3>Follow Us On</h3>
+                    <hr>
+                    <div class="social-icons">
+                        <div><img src="./assets/Group 1.svg" alt="Facebook"></div>
+                        <div><img src="./assets/x-2 1.svg" alt="X"></div>
+                        <div><img src="./assets/instagram-2016-5 1.svg" alt="Instagram"></div>
+                        <div><img src="./assets/pinterest-3 1.svg" alt="Pinterest"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         </main>
 
     </body>
