--- a/index.html
+++ b/index.html
@@ -88,7 +88,31 @@
                 </div>
             </div>
         </section>
-
         </main>
+
+        <footer>
+            
+        <section class="contact-section">
+            <div class="content_container">
+                <div class="main-heading">We always make sure to provide you <br> with good food</div>
+                <div class="sub-heading">Don't miss a thing! Subscribe to our newsletter</div>
+                <div class="follow-text">Follow Us On</div>
+                <div class="social-media-links">
+                    <a href="https://facebook.com" target="_blank">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook">
+                    </a>
+                    <a href="https://twitter.com" target="_blank">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6f/Logo_of_Twitter.svg" alt="X (Twitter)">
+                    </a>
+                    <a href="https://instagram.com" target="_blank">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
+                    </a>
+                    <a href="https://pinterest.com" target="_blank">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Pinterest-logo.png" alt="Pinterest">
+                    </a>
+                </div>
+            </div>
+        </section>
+        </footer>
 
     </body>
